@@ -1,6 +1,7 @@
 Changes in version 0.9.2:
 
 * Add support for JSON-RPC v2.0
+* Logger supports Python 2.7+ style docstrings on 2.6
 
 Changes in version 0.9.1:
 
